# aws-python-snippets

./: README.md  pyproject.toml
snippets/boto3/: athena.py  batch.py  botosession_refreshable.py  cloudwatch.py  db.py  dynamodb.py  glue.py  lambdas.py  redshift.py  secretman.py  sns.py  stepfunctions.py  sthreehandler.py  stshandler.py
tests/: test_athena.py  test_batch.py
